--- a/DjSpot/DjSpot.csproj
+++ b/DjSpot/DjSpot.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Include="wwwroot\images\DJSPOT.jpg" />
+  </ItemGroup>
+
 </Project>
