HeaderPic is auto and resizes

--- a/DjSpot/DjSpot.csproj
+++ b/DjSpot/DjSpot.csproj
@@ -21,4 +21,8 @@
     <EmbeddedResource Include="wwwroot\images\DJSPOT.jpg" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Include="wwwroot\images\d2.jpg" />
+  </ItemGroup>
+
 </Project>
